# ram

./: .clang-format  .gitignore  ALL_GAPS_COMPLETED.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  Makefile.am  README.md  build.sh  cleanup_postgres.sh  configure.ac  docker-compose.yml  install.sh  ramctrl_demo.sh  test_integration.conf
.circleci/: config.yml
.github/codeql/: codeql-config.yml  postgresql-security.qls
.github/codeql/queries/: buffer-overflow.ql  memory-management.ql  postgresql-security.ql  qlpack.yml
.github/workflows/: build.yml  ci.yml  codeql-advanced.yml  codeql.yml  release.yml  test.yml
conf/: README.md  cluster.json  cluster.schema.json  defaults.h  environment.conf  integration.conf  pgraft.conf  postgresql.conf  primary.yaml  ram.conf  ramctrl.conf  ramd.conf  replica1.yaml  replica2.yaml
doc/: README.md
doc/api-reference/: ramd-api.md  rest-api.md
doc/getting-started/: pgraft.md  quick-start.md  ramctrl.md  ramd.md
docker/: .dockerignore  Dockerfile  Dockerfile.monitor  Dockerfile.postgres  Dockerfile.ramd  README-monitoring.md  README.md  docker-compose-monitoring.yml  docker-compose-single.yml  docker-compose.yml  entrypoint.sh  pg_hba.conf  postgresql.conf  ramd.conf  test-metrics.sh
docker/grafana/dashboards/: dashboard.yml  ramd-cluster-overview.json  ramd-detailed-metrics.json
docker/prometheus/: prometheus.yml
docker/ramctrl-scripts/: cluster-status.sh
include/: client_ip_config.h  config_loader.h  config_parser.h  enhanced_logging.h  error_handling.h  input_validation.h  memory_cleanup.h  memory_utils.h  performance_monitor.h  ram_config_advanced.h  ram_config_system.h  ram_defaults.h  ram_integration.h  security_hardening.h  thread_safety.h
k8s/crds/: postgresqlcluster.yaml
k8s/operator/: main.go
k8s/operator/api/v1/: postgresqlcluster_types.go
k8s/operator/controllers/: postgresqlcluster_controller.go
pg_ram/: .clang-tidy  .gitignore  Makefile.am  README.md  pg_ram--1.0.sql  pg_ram.control
pg_ram/include/: pgram_defaults.h  pgram_guc.h  pgram_health_types.h  pgram_health_worker.h  pgram_librale.h  pgram_librale_worker.h  pgram_logical_slots.h  pgram_workers.h  postgresql_healthcheck.h  postgresql_monitor.h  quorum_selection.h
pg_ram/sql/: pg_ram--1.0.minimal.sql  pg_ram--1.0.sql
pg_ram/sql_minimal/: pg_ram--1.0.sql
pg_ram/src/: pg_ram.c  pgram_guc.c  pgram_health_worker.c  pgram_librale.c  pgram_librale_functions.c  pgram_librale_worker.c  pgram_logical_slots.c  pgram_worker_manager.c  postgresql_healthcheck.c  postgresql_monitor.c  quorum_selection.c
pgraft/: ARCHITECTURE.md  Makefile  README.md  TUTORIAL.md  pgraft--1.0.sql  pgraft.control  pgraft_go.h
pgraft/examples/: log1  pgraft_cluster.py  primary1.conf  replica1.conf  replica2.conf  requirements.txt  run.sh  setup.sh
pgraft/include/: pgraft.h  pgraft_core.h  pgraft_go.h  pgraft_go.h.pch  pgraft_guc.h  pgraft_log.h  pgraft_sql.h  pgraft_state.h  pgraft_worker.h
pgraft/sql/: pgraft_cluster.sql  pgraft_views.sql
pgraft/src/: comm.c  guc.c  health_worker.c  metrics.c  monitor.c  monitor_simple.c  pgraft.c  pgraft_core.c  pgraft_go.c  pgraft_go.go  pgraft_go.h  pgraft_guc.c  pgraft_log.c  pgraft_sql.c  pgraft_state.c  pgraft_util.c  pgraft_worker.c  raft.c  test_go.h  test_pgraft_go.h  utils.c  worker_manager.c
ramctrl/: Makefile.am  README.md  ramctrl  simple_ramctrl  simple_ramctrl.c
ramctrl/conf/: ramctrl.conf
ramctrl/include/: ramctrl.h  ramctrl_common.h  ramctrl_daemon.h  ramctrl_database.h  ramctrl_defaults.h  ramctrl_formation.h  ramctrl_help.h  ramctrl_http.h  ramctrl_replication.h  ramctrl_security.h  ramctrl_show.h  ramctrl_table.h  ramctrl_watch.h
ramctrl/src/: ramctrl_common.c  ramctrl_daemon.c  ramctrl_database.c  ramctrl_formation.c  ramctrl_formation_complex.c  ramctrl_formation_simple.c  ramctrl_help.c  ramctrl_http.c  ramctrl_main.c  ramctrl_missing_functions.c  ramctrl_replication.c  ramctrl_security.c  ramctrl_show.c  ramctrl_table.c  ramctrl_watch.c
ramd/: Makefile.am  README.md  ramd  ramd.conf
ramd/conf/: ramd.conf  ramd.json  ramd.yaml
ramd/include/: ramd.h  ramd_api_enhanced.h  ramd_backup.h  ramd_basebackup.h  ramd_callbacks.h  ramd_cascade.h  ramd_cluster.h  ramd_cluster_management.h  ramd_common.h  ramd_config.h  ramd_config_reload.h  ramd_conn.h  ramd_daemon.h  ramd_defaults.h  ramd_failover.h  ramd_http_api.h  ramd_logging.h  ramd_maintenance.h  ramd_metrics.h  ramd_monitor.h  ramd_pgraft.h  ramd_postgresql.h  ramd_postgresql_auth.h  ramd_postgresql_params.h  ramd_prometheus.h  ramd_query.h  ramd_security.h  ramd_standby_cluster.h  ramd_sync_replication.h  ramd_sync_standbys.h
ramd/src/: ramd_api_enhanced.c  ramd_backup.c  ramd_basebackup.c  ramd_callbacks.c  ramd_cascade.c  ramd_cluster.c  ramd_cluster_management.c  ramd_config.c  ramd_config_reload.c  ramd_conn.c  ramd_failover.c  ramd_http_api.c  ramd_logging.c  ramd_main.c  ramd_maintenance.c  ramd_metrics.c  ramd_missing_functions.c  ramd_monitor.c  ramd_pgraft.c  ramd_pgsql.c  ramd_postgresql.c  ramd_postgresql_auth.c  ramd_postgresql_params.c  ramd_prometheus.c  ramd_query.c  ramd_security.c  ramd_standby_cluster.c  ramd_sync_replication.c  ramd_sync_standbys.c
scripts/: cluster.json  cluster.py  local_3node_demo.sh
scripts/conf/: primary.conf  replica1.conf  replica2.conf
scripts/rpm/: pgraft.spec
test/: test_cleanup.sh  test_commands.sh  test_setup.sh
tests/: README.md  comprehensive_test_suite.py  conftest.py  pytest.ini  requirements.txt  run_all_tests.py  test_pgraft.c  test_ramd.c  test_suite.py
tests/e2e/: test_full_workflow.py
tests/integration/: test_cluster_integration.py
tests/performance/: test_pgraft_performance.py
tests/stress/: test_ramd_stress.py
tests/unit/: test_pgraft_unit.py
